<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.MainActivity"
        android:orientation="vertical">
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:visibility="invisible"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_margin="12dp" android:id="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    >
        <EditText
                android:id="@+id/main_activity_search_editext_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_weight="1"
                android:hint="@string/enter_summoner_name"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_activity_search_button"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_search_black_24dp"
                android:text="@string/search"
                android:textColor="@android:color/white"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#B0B0B0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" android:id="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <TextView
                android:id="@+id/main_activity_search_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/empty"
                android:gravity="center"/>
        <!--<androidx.recyclerview.widget.RecyclerView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent" android:paddingTop="12dp" android:paddingBottom="12dp"-->
        <!--android:clipToPadding="false" android:id="@+id/main_activity_search_recycler_view"/>-->
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
